# authx-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASING.md  audit.toml  package.json  release-plz.toml
.changeset/: README.md  config.json
.github/workflows/: ci.yml  js-versioning.yml  release.yml  rust-versioning.yml
crates/authx-axum/: Cargo.toml
crates/authx-axum/src/: cookies.rs  csrf.rs  errors.rs  extractors.rs  handlers.rs  lib.rs  middleware.rs  oidc.rs  rate_limit.rs  webauthn.rs
crates/authx-cli/: Cargo.toml
crates/authx-cli/src/: main.rs
crates/authx-cli/src/commands/: init.rs  key.rs  migrate.rs  mod.rs  oidc.rs  seed.rs  serve.rs  user.rs
crates/authx-core/: Cargo.toml
crates/authx-core/src/: brute_force.rs  config.rs  error.rs  identity.rs  lib.rs  validation.rs
crates/authx-core/src/crypto/: encryption.rs  hashing.rs  key_store.rs  mod.rs  signing.rs
crates/authx-core/src/events/: bus.rs  mod.rs  types.rs
crates/authx-core/src/models/: api_key.rs  audit_log.rs  credential.rs  invite.rs  mod.rs  oauth_account.rs  oidc.rs  organization.rs  session.rs  user.rs
crates/authx-core/src/policy/: builtin.rs  engine.rs  mod.rs
crates/authx-dashboard/: Cargo.toml
crates/authx-dashboard/assets/: index.html
crates/authx-dashboard/src/: api.rs  html.rs  lib.rs
crates/authx-plugins/: Cargo.toml
crates/authx-plugins/src/: base.rs  lib.rs  one_time_token.rs  redis_token_store.rs
crates/authx-plugins/src/admin/: mod.rs  service.rs
crates/authx-plugins/src/anonymous/: mod.rs  service.rs  tests.rs
crates/authx-plugins/src/api_key/: mod.rs  service.rs  tests.rs
crates/authx-plugins/src/email_otp/: mod.rs  service.rs  tests.rs
crates/authx-plugins/src/email_password/: mod.rs  routes.rs  service.rs  tests.rs
crates/authx-plugins/src/email_verification/: mod.rs  service.rs  tests.rs
crates/authx-plugins/src/magic_link/: mod.rs  service.rs
crates/authx-plugins/src/oauth/: mod.rs  service.rs  tests.rs
crates/authx-plugins/src/oauth/providers/: github.rs  google.rs  mod.rs
crates/authx-plugins/src/oidc_federation/: mod.rs  service.rs
crates/authx-plugins/src/oidc_provider/: discovery.rs  jwks.rs  mod.rs  service.rs
crates/authx-plugins/src/organization/: mod.rs  service.rs  tests.rs
crates/authx-plugins/src/password_reset/: mod.rs  service.rs
crates/authx-plugins/src/signup_flow/: mod.rs  service.rs  tests.rs
crates/authx-plugins/src/totp/: mod.rs  service.rs
crates/authx-plugins/src/username/: mod.rs  service.rs  tests.rs
crates/authx-plugins/src/webauthn/: mod.rs  service.rs
crates/authx-storage/: Cargo.toml
crates/authx-storage/src/: audit_logger.rs  lib.rs  ports.rs
crates/authx-storage/src/memory/: mod.rs  tests.rs
crates/authx-storage/src/sqlx/: mod.rs  postgres.rs
crates/authx-storage/src/sqlx/migrations/: 0001_initial_schema.sql  0002_phase5.sql  0003_oidc_provider.sql  0004_federation_org_and_claims.sql  0005_webauthn_credential_kind.sql
docs/: README.md  architecture.md  astro.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  wrangler.jsonc
docs/src/content/docs/: index.mdx
docs/src/content/docs/auth/: anonymous.md  api-keys.md  email-otp.md  email-password.md  magic-link.md  oauth.md  username.md
docs/src/content/docs/authz/: abac.md  organizations.md  rbac.md
docs/src/content/docs/cli/: overview.md
docs/src/content/docs/concepts/: events.md  identity.md  oidc-federation.md  oidc-provider.md  oidc.md  organizations-and-roles.md  plugins.md  policies.md  session-vs-token-strategy.md  session-vs-token.md  sessions.md  storage.md
docs/src/content/docs/examples/: actix-app.md  axum-app.md  multi-tenant.md
docs/src/content/docs/getting-started/: architecture.md  configuration.md  introduction.md  quick-start.md
docs/src/content/docs/guides/: authx-idp-for-spa.md  enterprise-oidc-sso.md  enterprise-sso-integration.md  multi-tenant-saas.md  publish-typescript-sdk.md  spa-idp-integration.md  spa-integration.md  typescript-sdk.md
docs/src/content/docs/http/: actix-web.md  axum.md  dashboard.md  handlers.md  hyper.md  middleware.md  warp.md
docs/src/content/docs/mfa/: backup-codes.md  email-otp.md  totp.md
docs/src/content/docs/operations/: management-api.md  metrics.md
docs/src/content/docs/reference/: data-models.md  error-codes.md
docs/src/content/docs/reference/typescript/: index.md  sdk-react.md  sdk-vue.md  sdk-web.md  sdk.md
docs/src/content/docs/security/: brute-force.md  crypto.md  csrf.md  key-rotation.md  rate-limiting.md
docs/src/content/docs/storage/: custom.md  memory.md  postgres.md
docs/src/styles/: custom.css
examples/actix-app/: Cargo.toml
examples/actix-app/src/: main.rs
examples/axum-app/: Cargo.toml
examples/axum-app/src/: main.rs
examples/fullstack-app/: README.md  docker-compose.yml
examples/fullstack-app/client/: .env  index.html  package-lock.json  package.json  vite.config.ts
examples/fullstack-app/client/src/: App.tsx  auth.ts  env.d.ts
examples/fullstack-app/server/: Cargo.toml
examples/fullstack-app/server/src/: main.rs
examples/react-sdk-app/: README.md  index.html  package-lock.json  package.json
examples/react-sdk-app/src/: App.tsx  auth.ts
examples/vue-sdk-app/: README.md  index.html  package-lock.json  package.json  tsconfig.json
examples/vue-sdk-app/src/: App.vue  auth.ts  main.ts
scripts/: generate-ts-api-docs.mjs
