[workspace]
members = [
    "crates/*",
    "examples/axum-app",
    "examples/actix-app",
    "examples/fullstack-app/server",
]
resolver = "2"

[workspace.package]
version       = "0.1.2"
edition       = "2024"
license       = "MIT"
repository    = "https://github.com/hamzzy/authx-rs"
homepage      = "https://github.com/hamzzy/authx-rs"
documentation = "https://docs.rs/authx-core"
readme        = "README.md"
authors       = ["authx contributors"]

[workspace.dependencies]
# Async
tokio        = { version = "1",    features = ["full"] }
async-trait  = "0.1"

# HTTP
axum         = { version = "0.7" }
axum-extra   = { version = "0.9", features = ["typed-header"] }
tower        = { version = "0.5" }
tower-http   = { version = "0.6", features = ["trace", "cors"] }
http         = "1"
cookie       = { version = "0.18", features = ["percent-encode"] }

# Crypto
argon2       = { version = "0.5", features = ["std"] }
aes-gcm      = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core", "pkcs8"] }
rand         = "0.8"
sha2         = "0.10"
hex          = "0.4"

# JWT
jsonwebtoken = "9"

# Serialization
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
uuid         = { version = "1", features = ["v4", "serde"] }
chrono       = { version = "0.4", features = ["serde"] }

# Database — tls-rustls avoids the rsa/sqlx-mysql transitive dep (RUSTSEC-2023-0071)
sqlx         = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "macros", "migrate", "chrono"] }

# MFA
totp-rs      = { version = "5", features = ["gen_secret", "otpauth"] }
webauthn-rs  = "0.5.4"

# Error handling
thiserror    = "1"
anyhow       = "1"

# Observability
tracing              = "0.1"
tracing-subscriber   = { version = "0.3", features = ["env-filter"] }

# HTTP client (OAuth)
reqwest      = { version = "0.12", features = ["json"] }

# Encoding utilities
base64       = "0.22"
urlencoding  = "2"

# Security
subtle       = "2"
email_address = "0.2"
pkcs8        = { version = "0.10", features = ["alloc", "pem"] }

# Internal crates — path + version so `cargo publish` resolves from crates.io
authx-core    = { path = "crates/authx-core",    version = "0.1" }
authx-storage = { path = "crates/authx-storage", version = "0.1" }
authx-plugins = { path = "crates/authx-plugins", version = "0.1" }
authx-axum    = { path = "crates/authx-axum",    version = "0.1" }

[profile.release]
lto           = true
codegen-units = 1
