[package]
name    = "authx-axum"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
authx-core.workspace    = true
authx-storage.workspace = true
async-trait.workspace   = true
axum.workspace          = true
axum-extra.workspace    = true
tower.workspace         = true
tower-http.workspace    = true
http.workspace          = true
serde.workspace         = true
serde_json.workspace    = true
uuid.workspace          = true
chrono.workspace        = true
tracing.workspace       = true
thiserror.workspace     = true
cookie.workspace        = true
authx-plugins.workspace = true

[dev-dependencies]
tokio.workspace         = true
authx-storage.workspace = true
