[package]
name             = "authx-axum"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
homepage.workspace   = true
documentation        = "https://docs.rs/authx-axum"
readme               = "../../README.md"
description          = "Axum integration for authx-rs: Tower middleware, session management, CSRF, rate limiting, and route handlers"
keywords             = ["authentication", "axum", "tower", "session", "middleware"]
categories           = ["authentication", "web-programming", "web-programming::http-server"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
authx-core.workspace    = true
authx-storage.workspace = true
async-trait.workspace   = true
axum.workspace          = true
axum-extra.workspace    = true
tower.workspace         = true
tower-http.workspace    = true
http.workspace          = true
serde.workspace         = true
serde_json.workspace    = true
uuid.workspace          = true
chrono.workspace        = true
tracing.workspace       = true
thiserror.workspace     = true
cookie.workspace        = true
authx-plugins.workspace = true

[dev-dependencies]
tokio.workspace         = true
authx-storage.workspace = true
