[package]
name    = "authx-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "authx command-line interface — serve, migrate, and manage users"

[[bin]]
name = "authx"
path = "src/main.rs"

[dependencies]
authx-core    = { workspace = true }
authx-storage = { workspace = true, features = ["sqlx-postgres"] }
authx-plugins = { workspace = true }
authx-axum    = { workspace = true }

tokio         = { workspace = true }
axum          = { workspace = true }
tower-http    = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
uuid          = { workspace = true }
chrono        = { workspace = true }
tracing       = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow        = { workspace = true }

clap = { version = "4", features = ["derive", "env"] }
