[package]
name             = "authx-core"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
homepage.workspace   = true
documentation        = "https://docs.rs/authx-core"
readme               = "../../README.md"
description          = "Core authentication primitives for authx-rs: crypto, JWT/EdDSA, RBAC/ABAC, events, and models"
keywords             = ["authentication", "authorization", "jwt", "crypto", "argon2"]
categories           = ["authentication", "cryptography", "web-programming"]

[dependencies]
tokio.workspace         = true
async-trait.workspace   = true
serde.workspace         = true
serde_json.workspace    = true
uuid.workspace          = true
chrono.workspace        = true
thiserror.workspace     = true
tracing.workspace       = true
argon2.workspace        = true
aes-gcm.workspace       = true
ed25519-dalek.workspace = true
rand.workspace          = true
sha2.workspace          = true
hex.workspace           = true
jsonwebtoken.workspace  = true

[dev-dependencies]
tokio = { workspace = true }
