[package]
name    = "authx-dashboard"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace   = true
documentation        = "https://docs.rs/authx-dashboard"
readme               = "../../README.md"
description = "Embedded admin dashboard for authx-rs"
keywords             = ["authentication", "dashboard", "admin", "ui"]
categories           = ["authentication", "web-programming"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
authx-core    = { workspace = true }
authx-storage = { workspace = true }
authx-plugins = { workspace = true }
authx-axum    = { workspace = true }

tokio      = { workspace = true }
axum       = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
uuid       = { workspace = true }
chrono     = { workspace = true }
tracing    = { workspace = true }
subtle     = { workspace = true }
reqwest    = { workspace = true }
