[package]
name             = "authx-plugins"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
homepage.workspace   = true
documentation        = "https://docs.rs/authx-plugins"
readme               = "../../README.md"
description          = "Auth plugin collection for authx-rs: email/password, TOTP, magic link, OAuth, API keys, organizations, and more"
keywords             = ["authentication", "totp", "oauth", "magic-link", "mfa"]
categories           = ["authentication", "web-programming"]

[dependencies]
authx-core.workspace    = true
authx-storage.workspace = true
async-trait.workspace   = true
serde.workspace         = true
serde_json.workspace    = true
uuid.workspace          = true
chrono.workspace        = true
thiserror.workspace     = true
tracing.workspace       = true
axum.workspace          = true
rand.workspace          = true
hex.workspace           = true
totp-rs.workspace       = true
tokio.workspace         = true
argon2.workspace        = true
reqwest.workspace       = true
base64.workspace        = true
urlencoding.workspace   = true
sha2.workspace          = true

[dev-dependencies]
tokio.workspace = true

[features]
redis-tokens = ["dep:redis"]

[dependencies.redis]
version  = "0.26"
features = ["aio", "tokio-comp"]
optional = true
