[package]
name    = "authx-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
authx-core.workspace   = true
async-trait.workspace  = true
tokio.workspace        = true
uuid.workspace         = true
chrono.workspace       = true
thiserror.workspace    = true
tracing.workspace      = true
serde_json.workspace   = true

[dependencies.sqlx]
workspace = true
optional  = true

[features]
sqlx-postgres = ["dep:sqlx"]

[dev-dependencies]
tokio.workspace = true
