[package]
name             = "authx-storage"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
homepage.workspace   = true
documentation        = "https://docs.rs/authx-storage"
readme               = "../../README.md"
description          = "Storage abstraction layer for authx-rs: repository traits, in-memory store, and PostgreSQL adapter"
keywords             = ["authentication", "storage", "repository", "postgres", "sqlx"]
categories           = ["authentication", "database", "web-programming"]

[dependencies]
authx-core.workspace   = true
async-trait.workspace  = true
tokio.workspace        = true
uuid.workspace         = true
chrono.workspace       = true
thiserror.workspace    = true
tracing.workspace      = true
serde_json.workspace   = true

[dependencies.sqlx]
workspace = true
optional  = true

[features]
sqlx-postgres = ["dep:sqlx"]

[dev-dependencies]
tokio.workspace = true
